able to close and open all tabs - dyno

--- a/index.html
+++ b/index.html
@@ -7,19 +7,71 @@
 	</head>
 	<body>
 		<div id="container">
-			<div class="container-one">
-				<nav>
-					<div class="nav-bar">
-						<button class="nav-btn btn-one">Basketball</button>
-						<button class="nav-btn btn-two">Football</button>
-						<button class="nav-btn btn-three">Baseballl</button>
+			<div class="overlay">
+				<div class="container-one">
+					<nav>
+						<div class="nav-bar">
+							<button id="1" class="nav-btn btn-one">Basketball</button>
+							<button id="2" class="nav-btn btn-two">Football</button>
+							<button id="3" class="nav-btn btn-three">Baseballl</button>
+						</div>
+					</nav>
+				</div>
+				<div class="container-two">
+					<div id="pop-up-1" class="pop-up hidden">
+						...
+						<h1 class="pop-header">Pop-Up-One Header</h1>
+						<span>
+							<button id="clsdBtn-1" class="pop-x-btn pop-btn-one clearfix">
+								X
+							</button>
+						</span>
+						<div class="pop-msg-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Adipisci eius praesentium dolorem illo corrupti sapiente dolores
+								id natus nesciunt, ratione sit iste facere autem odit ipsa
+								accusantium repellat exercitationem! Ea?
+							</p>
+						</div>
 					</div>
-				</nav>
-			</div>
-			<div class="container-two">
-				<div class="pop-up pop-up-one">...</div>
-				<div class="pop-up pop-up-two">...</div>
-				<div class="pop-up pop-up-three">...</div>
+					<div class="pop-up-two">...</div>
+					<div id="pop-up-2" class="pop-up hidden">
+						...
+						<h1 class="pop-header">Pop-Up-Two Header</h1>
+						<span>
+							<button id="clsdBtn-2" class="pop-x-btn pop-btn-two clearfix">
+								X
+							</button>
+						</span>
+						<div class="pop-msg-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Adipisci eius praesentium dolorem illo corrupti sapiente dolores
+								id natus nesciunt, ratione sit iste facere autem odit ipsa
+								accusantium repellat exercitationem! Ea?
+							</p>
+						</div>
+					</div>
+					<div class="pop-up-three">...</div>
+					<div id="pop-up-3" class="pop-up hidden">
+						...
+						<h1 class="pop-header">Pop-Up-Three Header</h1>
+						<span>
+							<button id="clsdBtn-3" class="pop-x-btn pop-btn-three clearfix">
+								X
+							</button>
+						</span>
+						<div class="pop-msg-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Adipisci eius praesentium dolorem illo corrupti sapiente dolores
+								id natus nesciunt, ratione sit iste facere autem odit ipsa
+								accusantium repellat exercitationem! Ea?
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
